infra/storage/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: meu-gateway-dualstack
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: default
  hostnames:
    - "longhorn.aesthar.com.br"
  rules:
    - backendRefs:
      - name: longhorn-frontend
        group: ''
        kind: Service
        port: 80
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
